Added some photos and write ups for people

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     <meta property="og:url" content="https://willandmich19.github.io/" />
     <meta property="og:description" content="Michelle and William 2019 Wedding Website">
     <meta property="og:image" content="images/link_preview_image.jpg">
+    <meta property="og:image:secure_url" content="images/link_preview_image.jpg">
+    <meta property="og:image:type" content="image/jpeg" /> 
+    <meta property="og:image:width" content="300" /> 
+    <meta property="og:image:height" content="200" />
     <meta property="og:type" content="website" />
     <meta property="og:locale" content="en_US" />
     <meta name="author" content="William Wong">
@@ -109,7 +113,7 @@
     <section id="info" class="info">
         <aside class="info_frame">
             <h1 class="info_fancyfont">Message for You</h1>
-            <p><span class="no-widow">Michelle and</span>  William kindly invite you to join in celebrating this joyful moment of their lives. We ask that you kindly RSVP with the form below indicating whether you will be attending or not. If you will be attending, please list all names of the attendees and let us know about any dietary <span class="no-widow">preferences too.</span></p> 
+            <p><span class="no-widow">Michelle and</span>  William kindly invite you to join in celebrating this joyful moment of their lives. We ask that you kindly to <strong class="underline">RSVP before May 1, 2019</strong> with the form below indicating whether you will be attending or not. If you will be attending, please list all names of the attendees and let us know about any dietary <span class="no-widow">preferences too.</span></p> 
             <p><span class="no-widow">Thanks so</span> much for all of your love and support so far! We can’t wait to celebrate this special day with all of our favourite people.<span class="no-widow"></span></p>
             <hr />
             <h2 class="info_weddingdate">July 12, 2019 at 9:30am</h2>
@@ -131,7 +135,7 @@
                     <summary>
                         <p><span class="no-widow">Read up</span> on <span class="no-widow">Michelle & William</span></p>
                     </summary>
-                    <p><span class="no-widow">Michelle and</span> William have known each other for almost 6 years now. We were briefly introduced at our friend's BBQ (John Clemente) but we really got to know each other much better when we went to the Scarborough Bluff's beach. Ever since that day, we had fallen in love and we continued to do so up to this day. This also has been nothing but memorable moments between those two ever since. Michelle's hate for animals and William's love for animals is what we can say, opposites do attract each other. While that is just a sample, there are many things that they have opposites in and they believe this is what keeps this relationship <span class="no-widow">going forward.</span></p>
+                    <p><span class="no-widow">Michelle and</span> William have known each other for almost 6 years now. They were first briefly introduced by our friend Shadi at our friend John Clemente's BBQ. It was another day that is when they really got to know each other much better going to the Scarborough Bluff's beach to play volleyball. Ever since that day, they had fallen in love and continued to do so up to this day and into the future. These past years also had been nothing but memorable moments between those two. Michelle's hate for animals and William's love for animals is what people can say, opposites do attract each other. While that is just one example, there are many things that they have opposites in and they believe this is what keeps their relationship strong and <span class="no-widow">going forward.</span></p>
                 </details>
             </figure>
             <figure class="figure p-3 flex-item">
@@ -144,10 +148,7 @@
                     <summary>
                         <p><span class="no-widow">Read up</span> on <span class="no-widow">Jamielyn Camposano</span></p>
                     </summary>
-                    <p><span class="no-widow">Michelle first</span> met Jamie at her family video rental place. They
-                        later ran into each other again on the bus attending York and finally destined to pass when
-                        working at the same McDonalds' location. Their friendship remained through all <span class="no-widow">these
-                            years.</span></p>
+                    <p><span class="no-widow">Michelle and</span> Jamielyn first met at her family’s filipino video rental place. They were never introduced but her face was clearly one to remember for when their paths crossed again, they recognized one another from the video rental place. Jamielyn at the time was attending Seneca at York with Michelle attending York University. They had run into one another on the Steeles West Bus heading home to which they had remember one another. To their surprise, they ended up working together at Mc Donalds with Jamielyn being her Manager and Michelle having saved her life when money accidentally fell out landing under the counter. Michelle came to the rescue giving Jamielyn a PERFECT TILL when counted. It was definitely a friendship that was destined to last with the amount of times their paths <span class="no-widow">had crossed.</span></p>
                 </details>
             </figure>
             <figure class="figure p-3 flex-item">
@@ -160,8 +161,8 @@
                     <summary>
                         <p><span class="no-widow">Read up</span> on <span class="no-widow">Paulo Aquino</span></p>
                     </summary>
-                    <p><span class="no-widow">William has</span> known Paulo since out high school days at Francis
-                        Libermann Catholic High School. They did not really know each other till grade 11 computer science class. That time Paulo was trying to be an A+ student sitting in the front while William was doing the opposite sitting in the back. What they really got together was their love for computer games that time, aka Shattered Galaxy and checking girls out at <span class="no-widow">the gym.</span></p>
+                    <p><span class="no-widow">William has</span> known Paulo since their high school days at Francis
+                        Libermann Catholic High School. They did not really know each other till grade 11 computer science class. That time Paulo was trying to be an A+ student sitting in the front while William was doing the opposite sitting in the back. What they really got together was their love for computer games that time, aka Shattered Galaxy and skipping computer technology class to check out girls at the gym during hot <span class="no-widow">humid days.</span></p>
                 </details>
             </figure>
             <figure class="figure p-3 flex-item">
@@ -174,11 +175,11 @@
                     <summary>
                         <p><span class="no-widow">Read up</span> on <span class="no-widow">Charlene Lopez</span></p>
                     </summary>
-                    <p><span class="no-widow">Michelle and</span> Charlene first met as kids at a family gathering thrown by Michelle's aunt (Charlene's aunt in law). Their friendship sustained all these years with Michelle having been one of Charlene's Bridesmaids back <span class="no-widow">in 2011.</span></p>
+                    <p><span class="no-widow">Michelle and</span> Charlene first met at a family party. Everytime Charlene’s uncle (Michelle’s uncle in law and aunt, Charlene’s uncle and aunt in law) hosted parties Michelle and Charlene would always stick together and play with other kids whether it be Hide and Seek or Card games. They would get together having sleep overs at one another’s house with their Cabbage Patch Dolls. In 2011, Michelle was one of the Bridesmaids at Charlene’s wedding. It was only fit that Charlene would be chosen to be one of hers with the two having grown <span class="no-widow">up together.</span></p>
                 </details>
             </figure>
             <figure class="figure p-3 flex-item">
-                <img class="figure-img" src="images/crew1.jpg" alt="John Clemente" />
+                <img class="figure-img" src="images/home_image06.jpg" alt="John Clemente" />
                 <figcaption>
                     <h2>John Clemente</h2>
                     <p><em>Groomsman</em></p>
@@ -187,7 +188,7 @@
                     <summary>
                         <p><span class="no-widow">Read up</span> on <span class="no-widow">John Clemente</span></p>
                     </summary>
-                    <p><span class="no-widow">William and</span> John first met not in real life, but in cyberspace. (To be exact it was World of Warcraft: Classic in 2006 or 2007). William was playing a Rogue class and soon to later find out that John also played a Rogue class as well. It is their understanding of this class and its mechanics that brought them together in not only cyberspace but also into the future of playing real <span class="no-widow">sports together.</span></p>
+                    <p><span class="no-widow">William and</span> John first met not in real life, but in cyberspace (To be exact it was World of Warcraft: Classic in 2006 or 2007). William was playing a Rogue class and soon to later find out that John also played a Rogue class as well. It is their understanding of this class and its mechanics that brought them together in not only cyberspace but also into the future of playing many different sports and going to the <span class="no-widow">clubs together.</span></p>
                 </details>
             </figure>
             <figure class="figure p-3 flex-item">
@@ -200,13 +201,11 @@
                     <summary>
                         <p><span class="no-widow">Read up</span> on <span class="no-widow">Koulla Martin</span></p>
                     </summary>
-                    <p><span class="no-widow">I have</span> known Paulo since out high school days at Francis
-                        Libermann. We
-                        did not really know each other till grade 11 computer <span class="no-widow">science class.</span></p>
+                    <p><span class="no-widow">Michelle got</span> a phone call close to the Christmas break in which she had to cover for a teacher that was pregnant and ready to go on her maternity leave. That's when Michelle and Koulla first met. Upon returning from her maternity leave, Michelle was offered a permanent ECE position. Michelle and Koulla's friendship grew due to them having to work together as both ECEs in the same school. They often cracked jokes and just plain having fun. This is what brought the two together making their friendship up to <span class="no-widow">this date.</span></p>
                 </details>
             </figure>
             <figure class="figure p-3 flex-item">
-                <img class="figure-img" src="images/crew1.jpg" alt="Ryan De Guzman" />
+                <img class="figure-img" src="images/home_image08.jpg" alt="Ryan De Guzman" />
                 <figcaption>
                     <h2>Ryan De Guzman</h2>
                     <p><em>Groomsman</em></p>
@@ -215,7 +214,7 @@
                     <summary>
                         <p><span class="no-widow">Read up</span> on <span class="no-widow">Ryan De Guzman</span></p>
                     </summary>
-                    <p><span class="no-widow">Willam and</span> Ryan first met during our first ever freshman year at Seneca College @ York University. They were both taking the computer programming course and later to find out both of them "lost passion" doing it. When mentioning "lost passion", it means that both of them skip class to play computer games. The days of Unreal Tournament, Medal of Honor and Warcraft 3 is what kept them together but it was our love for Diablo 2 (They played till 3am with an 8am class in the morning) that made their friendship solid. This friendship eventually led them to keep in touch and sustained throughout all <span class="no-widow">these years.</span></p>
+                    <p><span class="no-widow">Willam and</span> Ryan first met during their freshmen year at Seneca College @ York University. They were both taking the computer programming course and later to find out both of them "lost passion" in the program. When mentioning "lost passion", it means that both of them skipped class to play computer games. The days of Unreal Tournament, Medal of Honor and Warcraft 3 were what kept them together but it was their love for Diablo 2 (They played till 3am with an 8am class in the morning) that made their friendship solid. This friendship eventually led them to keep in touch and sustained throughout all <span class="no-widow">these years.</span></p>
                 </details>
             </figure>
             <figure class="figure p-3 flex-item">
@@ -228,13 +227,11 @@
                     <summary>
                         <p><span class="no-widow">Read up</span> on <span class="no-widow">Megan MacDonald</span></p>
                     </summary>
-                    <p><span class="no-widow">I have</span> known Paulo since out high school days at Francis
-                        Libermann. We
-                        did not really know each other till grade 11 computer <span class="no-widow">science class.</span></p>
+                    <p><span class="no-widow">Megan and</span> Michelle met in Windsor when the two decided to pursue their Bachelor of Education at the University of Windsor. The two were floor mates and often walked to class together with other peers, went to dinner, and hung in the lounge. Often, they got together and prepped Practicum activities while listening to music or watching t.v Megan was considered the “seamstress” of the floor when she offered to help put together Michelle’s outfit along with others for the schools “Toga party.” With Megan living so close to Michelle in Toronto, they would together go to Toronto together to <span class="no-widow">visit family.</span></p>
                 </details>
             </figure>
             <figure class="figure p-3 flex-item">
-                <img class="figure-img" src="images/crew1.jpg" alt="Warren Rego" />
+                <img class="figure-img" src="images/home_image10.jpg" alt="Warren Rego" />
                 <figcaption>
                     <h2>Warren Rego</h2>
                     <p><em>Groomsman</em></p>
@@ -243,9 +240,7 @@
                     <summary>
                         <p><span class="no-widow">Read up</span> on <span class="no-widow">Warren Rego</span></p>
                     </summary>
-                    <p><span class="no-widow">I have</span> known Paulo since out high school days at Francis
-                        Libermann. We
-                        did not really know each other till grade 11 computer <span class="no-widow">science class.</span></p>
+                    <p><span class="no-widow">William knew</span> Warren also in high school at Francis Libermann. They first met each other chilling at their friend Blaine Vander Griend's house which will be forever to be known as Blaine Day. This Blaine Day is what brought this "unholy" alliance together after high school when they always host Super Smash Brothers, Halo 2 and Monday Night Raw at our friend Jeff Pascual's house weekly. It is this alliance that kept their friendship strong together and come hell or high water will remain <span class="no-widow">that way.</span>
                 </details>
             </figure>
             <figure class="figure p-3 flex-item">
@@ -271,9 +266,7 @@
                     <summary>
                         <p><span class="no-widow">Read up</span> on <span class="no-widow">Adamn Aquino</span></p>
                     </summary>
-                    <p><span class="no-widow">I have</span> known Paulo since out high school days at Francis
-                        Libermann. We
-                        did not really know each other till grade 11 computer <span class="no-widow">science class.</span></p>
+                    <p><span class="no-widow">William first</span> met Adam when he was still a baby at Paulo's old house in Markham. He also held him for the first time as well during that same visit (William held him for a picture to impress another girl that time). Ever since then Adam following in his father's footstep started doing and liking the things Paulo used to do. He is eager to play trading card games such as Pokemon, YugiOh and BeyBlade. William chose Adam as the ring/coin bearer because he is the first little kid that William saw growing up from a baby more often than others and he is also a <span class="no-widow"></span>little Paulo.</span></p>
                 </details>
             </figure>
         </div>
@@ -398,7 +391,7 @@
                             </div>
 
                             <p><strong><span class="no-widow">Entree Served:</span></strong></p>
-                            <ul>
+                            <ol>
                                 <li>
                                     <p>Chateau Briand (Beef)</p>
                                 </li>
@@ -408,7 +401,7 @@
                                 <li>
                                     <p>Roasted Potatoes and Veggies</p>
                                 </li>
-                            </ul>
+                            </ol>
                             <p class="underline"><em><span class="no-widow underline">Yes, this</span> will be an <span class="no-widow underline">open bar.</span></em></p>
 
                             <div class="form-group">
