--- a/index.html
+++ b/index.html
@@ -335,15 +335,15 @@
         <aside class="rsvp_frame">
             <h1 class="rsvp_fancyfont">R.S.V.P.</h1>
             <p><span class="no-widow"><span class="text-danger">*</span> are</span> <span class="no-widow">required fields.</span></p>
-            <form action="https://docs.google.com/forms/d/e/1FAIpQLSd7EGc9gQrEO_Jul4VqT9F-_7RIL_AB8Jpbdb6fDuvXflWdvA/formResponse" target="hidden_iframe" id="gForm" method="POST" name="gForm">
-            <!--<form action="" target="hidden_iframe" id="gForm" method="POST" name="gForm">-->
-                    <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;"></iframe>
+            <form action="https://docs.google.com/forms/d/e/1FAIpQLSd7EGc9gQrEO_Jul4VqT9F-_7RIL_AB8Jpbdb6fDuvXflWdvA/formResponse" target="_self" id="gForm" method="POST" name="gForm">
+            <!--<form action="" id="gForm" method="GET" name="gForm">-->
+                    <!--<iframe name="hidden_iframe" id="hidden_iframe" style="display:none;"></iframe>-->
                 <div class="form-group">
                     <label for="selectTitle">Title <span class="text-danger">*</span></label>
                     <select class="form-control" id="entry.239982359" name="entry.239982359">
                         <option value="Mr. Awesome..." selected>Mr. Awesome...</option>
-                <option value="Mrs. Sexy...">Mrs. Sexy...</option>
-                <option value="Miss. Single, ready to mingle...">Miss. Single, ready to mingle...</option>
+                        <option value="Mrs. Sexy...">Mrs. Sexy...</option>
+                        <option value="Miss. Single, ready to mingle...">Miss. Single, ready to mingle...</option>
                     </select>
                 </div>
 
@@ -459,7 +459,7 @@
               </button>
             </div>
             <div class="modal-body">
-              <div id="submitMessage"></div>
+              <div id="submitMessage"><p>Thank you!</p></div>
             </div>
             <div class="modal-footer">
               <button id="buttonClose" type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
