--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                 </details>
             </figure>
             <figure class="figure p-3 flex-item">
-                <img class="figure-img" src="images/crew1.jpg" alt="Koulla Martin" />
+                <img class="figure-img" src="images/home_image07.jpg" alt="Koulla Martin" />
                 <figcaption>
                     <h2>Koulla Martin</h2>
                     <p><em>Bridesmaid</em></p>
@@ -335,6 +335,7 @@
         <aside class="rsvp_frame">
             <h1 class="rsvp_fancyfont">R.S.V.P.</h1>
             <p><span class="no-widow"><span class="text-danger">*</span> are</span> <span class="no-widow">required fields.</span></p>
+            <p id="submittedFormBefore" class="text-danger hidden"><strong><span class="no-widow">You have</span> already submitted this <span class="no-widow">form before.</span></strong></p>
             <form action="https://docs.google.com/forms/d/e/1FAIpQLSd7EGc9gQrEO_Jul4VqT9F-_7RIL_AB8Jpbdb6fDuvXflWdvA/formResponse" target="_self" id="gForm" method="POST" name="gForm">
             <!--<form action="" id="gForm" method="GET" name="gForm">-->
                     <!--<iframe name="hidden_iframe" id="hidden_iframe" style="display:none;"></iframe>-->
@@ -368,7 +369,7 @@
                 <!-- Nav tabs -->
                 <div class="form-group">
                     <label for="tabsYesNo">RSVP <span class="text-danger">*</span></label>
-                    <input type="text" style="visibility: hidden; display: none;" id="entry.562112224" name="entry.562112224" value="yes">
+                    <input type="text" class="hidden" id="entry.562112224" name="entry.562112224" value="yes">
                     <ul class="nav nav-tabs" role="tablist" id="tabsYesNo">
                         <li class="nav-item">
                             <a id="rsvpYes" class="nav-link active" href="#displayYes" role="tab" data-toggle="tab" value="rsvpYes">Yes</a>
