Added email html and optimized some images

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                 <img class="figure-img" src="images/home_image04.jpg" alt="Paulo Aquino" />
                 <figcaption>
                     <h2>Paulo Aquino</h2>
-                    <p><em>Best man</em></p>
+                    <p><em>Best Man</em></p>
                 </figcaption>
                 <details>
                     <summary>
