--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
             <p><span class="no-widow"><span class="text-danger">*</span> are</span> <span class="no-widow">required fields.</span></p>
             <p id="submittedFormBefore" class="text-danger hidden"><strong><span class="no-widow">You have</span> already submitted this <span class="no-widow">form before.</span></strong></p>
             <form action="https://docs.google.com/forms/d/e/1FAIpQLSd7EGc9gQrEO_Jul4VqT9F-_7RIL_AB8Jpbdb6fDuvXflWdvA/formResponse" target="_self" id="gForm" method="POST" name="gForm">
-            <form action="" id="gForm" method="GET" name="gForm">
+            <!--<form action="" id="gForm" method="GET" name="gForm">-->
                     <!--<iframe name="hidden_iframe" id="hidden_iframe" style="display:none;"></iframe>-->
                 <div class="form-group">
                     <label for="selectTitle">Title <span class="text-danger">*</span></label>
