--- a/index.html
+++ b/index.html
@@ -346,12 +346,11 @@
         <aside class="rsvp_frame">
             <h1 class="rsvp_fancyfont">R.S.V.P.</h1>
             <p><span class="no-widow">Please fill</span> out the RSVP form with your correct information to the best of </span> <span class="no-widow">your ability.</span></p>
-            <p><span class="no-widow">You should</span> recieve a confirmation email when you submit the form successfully. If you did not get an email, we did not get your RSVP. <strong>Please let us know if you did not recieved the </span> <span class="no-widow">confirmation email.</span></strong></p>
-            <br />
-            <hr />
+            <p><span class="no-widow">You should</span> recieve a confirmation email when you submit the form successfully. If you did not get an email, we did not get your RSVP. <strong>Please let us know if you did not recieve the </span> <span class="no-widow">confirmation email.</span></strong></p>
             <br />
             <div class="form=group">
-                <button type="button" class="btn rsvp-btn btn-lg btn-block" name="buttonForm" id="buttonForm" data-toggle="modal" data-target="#submitModal">Fill out the Form</button>
+                <!--<button type="button" class="btn rsvp-btn btn-lg btn-block" name="buttonForm" id="buttonForm" data-toggle="modal" data-target="#submitModal">Fill out the Form</button>-->
+                <iframe style="width: 100%; height: 1200px; overflow-y: hidden;" src="https://docs.google.com/forms/d/e/1FAIpQLSeEFzGBG5ow1THHq3xvNmJzSQXd9uPd8UdesoAwkayVmT4zgg/viewform?usp=pp_url&entry.1070189356=0&embedded=true" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
             </div>
 
             <!--
@@ -487,7 +486,7 @@
             <div class="modal-body">
               <div id="submitMessage">
                   <!--<p>Thank you!</p>-->
-                  <iframe style="width: 100%; height: 450px;" src="https://docs.google.com/forms/d/e/1FAIpQLSeEFzGBG5ow1THHq3xvNmJzSQXd9uPd8UdesoAwkayVmT4zgg/viewform?embedded=true" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+                  <!--<iframe style="width: 100%; height: 450px;" src="https://docs.google.com/forms/d/e/1FAIpQLSeEFzGBG5ow1THHq3xvNmJzSQXd9uPd8UdesoAwkayVmT4zgg/viewform?embedded=true" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>-->
                 </div>
             </div>
             <div class="modal-footer">
