fix responsive on the form

--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
             <br />
             <div class="form=group">
                 <!--<button type="button" class="btn rsvp-btn btn-lg btn-block" name="buttonForm" id="buttonForm" data-toggle="modal" data-target="#submitModal">Fill out the Form</button>-->
-                <iframe style="width: 100%; height: 1200px; overflow-y: hidden;" src="https://docs.google.com/forms/d/e/1FAIpQLSeEFzGBG5ow1THHq3xvNmJzSQXd9uPd8UdesoAwkayVmT4zgg/viewform?usp=pp_url&entry.1070189356=0&embedded=true" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+                <iframe class="formframe" src="https://docs.google.com/forms/d/e/1FAIpQLSeEFzGBG5ow1THHq3xvNmJzSQXd9uPd8UdesoAwkayVmT4zgg/viewform?usp=pp_url&entry.1070189356=0&embedded=true" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
             </div>
 
             <!--
