Updated some text

--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
     <section id="rsvp" class="rsvp">
         <aside class="rsvp_frame">
             <h1 class="rsvp_fancyfont">R.S.V.P.</h1>
-            <p><span class="no-widow">Please fill</span> out the RSVP form with your correct information to the best of </span> <span class="no-widow">your ability.</span></p>
+            <p><span class="no-widow">Please fill</span> out the RSVP form with your correct information to the best of your ability. If a guest(s) have been indicated in the invitation, only <strong>1 RSVP</strong> is required for you and/or <span class="no-widow">your guest(s).</span></p>
             <p><span class="no-widow">You should</span> recieve a confirmation email when you submit the form successfully. If you did not get an email, we did not get your RSVP. <strong>Please let us know if you did not recieve the </span> <span class="no-widow">confirmation email.</span></strong></p>
             <br />
             <div class="form=group">
