--- a/index.html
+++ b/index.html
@@ -230,16 +230,16 @@
                 </details>
             </figure>
             <figure class="figure p-3 flex-item">
-                <img class="figure-img" src="images/home_image10.jpg" alt="Warren Rego" />
+                <img class="figure-img" src="images/home_image10.jpg" alt="Blaine Van Der Griend" />
                 <figcaption>
-                    <h2>Warren Rego</h2>
+                    <h2>Blaine Van Der Griend</h2>
                     <p><em>Groomsman</em></p>
                 </figcaption>
                 <details>
                     <summary>
-                        <p><span class="no-widow">Read up</span> on <span class="no-widow">Warren Rego</span></p>
+                        <p><span class="no-widow">Read up</span> on <span class="no-widow">Blaine Van Der Griend</span></p>
                     </summary>
-                    <p><span class="no-widow">William knew</span> Warren at Francis Libermann High School. They first met each other chilling at their friend Blaine Vander Griend's house which will be forever to be known as Blaine Day. Warren was considered a loose cannon renegade hence the reason that brought this "unholy" alliance together. After high school, both Warren and William hosted Super Smash Brothers, Halo 2 and Monday Night Raw at our friend Jeff Pascual's house every week. It is this alliance and Warren's Halo 2 betrayal ways against Blaine that kept their friendship strong. Come hell or high water, this friendship has always remained <span class="no-widow">that way.</span>
+                    <p><span class="no-widow">William met</span> Blaine at Francis Libermann High School. They were first introduced by someone named Kenneth in grade 10 history class. This history class was special because William found out Blaine was "hardcore" that he decided to push his luck and use the money from the group project board to buy chocolate. Blaine to atone for this act of treason, decided to let William and the group members give him a beating with chairs as a form of forgiveness. This class was the beginning of their rivalry to prove who was more "hardcore" with Blaine walking in negative 30 degrees outside. Unfortunately for Blaine, William had proved himself to be more "hardcore" by climbing a mountain in that weather together with Paulo. To this day, the rivalry between the two continues to grow evolving into a friendship that has created <span class="no-widow">lasting memories.</span>
                 </details>
             </figure>
             <figure class="figure p-3 flex-item">
