--- a/index.html
+++ b/index.html
@@ -347,7 +347,9 @@
             <h1 class="rsvp_fancyfont">R.S.V.P.</h1>
             <p><span class="no-widow">Please fill</span> out the RSVP form with your correct information to the best of your ability. If a guest(s) have been indicated in the invitation, only <strong>1 RSVP</strong> is required for you and/or <span class="no-widow">your guest(s).</span></p>
             <p><span class="no-widow">You should</span> recieve a confirmation email when you submit the form successfully. If you did not get an email, we did not get your RSVP. <strong>Please let us know if you did not recieve the </span> <span class="no-widow">confirmation email.</span></strong></p>
-            <br />
+            <hr/>
+            <p class="smalltext"><span class="no-widow">Gift Wish</span></p>
+            <p class="smalltext"><em><span class="no-widow">Our lives</span> together has already begun, we have almost everything under the sun. If you should wish to buy us a gift, a little extra money will give us a lift in our journey together as newlywed husband and wife. But most importantly, we request, you share our day as our wedding guests. Now that we have saved you any fuss, we cannot wait for you to celebrate <span class="no-widow">with us!</span></em></p>
             <div class="form=group">
                 <!--<button type="button" class="btn rsvp-btn btn-lg btn-block" name="buttonForm" id="buttonForm" data-toggle="modal" data-target="#submitModal">Fill out the Form</button>-->
                 <iframe class="formframe" src="https://docs.google.com/forms/d/e/1FAIpQLSeEFzGBG5ow1THHq3xvNmJzSQXd9uPd8UdesoAwkayVmT4zgg/viewform?usp=pp_url&entry.1070189356=0&embedded=true" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
